--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script defer src="./js/login.js"></script>
   <link rel="shortcut icon" href="./images/brain.png" type="image/x-icon">
-  <title>Memory Game | Login</title>
+  <title>Jogo da memória</title>
 </head>
 
 <body>
