add botão de login e reiniciar o jogo automaticamente

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="login__header">
       <img src="./images/logom.png" alt="logo">
-      <h1>Jogo da memória</h1>
+      <h1 class="tittle">Jogo da memória</h1>
     </div>
 
     <input type="text" placeholder="Nome" class="login__input">
