--- a/pages/game.html
+++ b/pages/game.html
@@ -9,7 +9,7 @@
 
   <script defer src="../js/game.js"></script>
 
-  <title>Jogo da memória</title>
+  <title>🧠 Jogo da memória</title>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
     <header>
       <span class="player"></span>
       <span>Tempo: <span class="timer">00</span></span>
+      <button class="login__button" type="button" onclick="window.location = '/index.html'">Login</button>
     </header>
 
     <div class="grid"></div>
